# serde_rosmsg

./: Cargo.toml  LICENSE  README.md
src/: de.rs  error.rs  lib.rs  ser.rs
src/datatests/: mod.rs  pose.rs  pose_array.rs  pose_message_definition.txt  pose_with_covariance.rs  pose_with_covariance_message_definition.txt  string.rs
