[package]
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
categories = ["encoding"]
description = "A rosmsg serialization file format"
keywords = ["ros", "rosmsg", "serde", "serialization"]
license = "MIT"
name = "serde_rosmsg"
readme = "README.md"
repository = "https://github.com/adnanademovic/serde_rosmsg"
version = "0.0.0"

[badges]
travis-ci = { repository = "adnanademovic/serde_rosmsg" }

[dependencies]
byteorder = "1.0.0"
error-chain = "0.9.0"
serde = "0.9.7"
