[package]
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
categories = ["encoding"]
description = "A rosmsg serialization file format"
documentation = "https://docs.rs/serde_rosmsg/0.1.0/serde_rosmsg"
keywords = ["ros", "rosmsg", "serde", "serialization"]
license = "MIT"
name = "serde_rosmsg"
readme = "README.md"
repository = "https://github.com/adnanademovic/serde_rosmsg"
version = "0.1.0"

[badges]

[badges.travis-ci]
repository = "adnanademovic/serde_rosmsg"

[dependencies]
byteorder = "1.0.0"
error-chain = "0.10.0"
serde = "1.0.2"
serde_derive = "1.0.2"
